2007-03-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/_agents/text.py (capitalize):
	Use Parser instead of Finder.

2007-03-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/posadjust.py:
	Fix text view widths.

2007-03-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/posadjust-dialog.glade:
	* data/ui.xml:
	* gaupol/gtk/_actions/file.py:
	* gaupol/gtk/_actions/position.py:
	* gaupol/gtk/_agents/position.py:
	* gaupol/gtk/_agents/preview.py:
	* gaupol/gtk/dialogs/__init__.py:
	* gaupol/gtk/dialogs/posadjust.py:
	* gaupol/gtk/dialogs/posshift.py:
	Add position adjust.

2007-03-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/base/observable.py (block_all, unblock_all):
	New methods.

	* gaupol/gtk/_agents/preview.py (preview_changes):
	Wrap the project method call with a block_all-unblock_all.

2007-03-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/posshift-dialog.glade:
	* data/ui.xml:
	* gaupol/gtk/_actions/position.py:
	* gaupol/gtk/_agents/__init__.py:
	* gaupol/gtk/_agents/position.py:
	* gaupol/gtk/dialogs/__init__.py:
	* gaupol/gtk/dialogs/posshift.py:
	Add position shift.

2007-03-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/util.py (browse_url):
	Quote url.

2007-03-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/_actions/format.py:
	* gaupol/gtk/_actions/position.py:
	Fix imports.

2007-03-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/_actions/edit.py:
	* gaupol/gtk/_actions/file.py:
	* gaupol/gtk/_actions/format.py:
	* gaupol/gtk/_actions/help.py:
	* gaupol/gtk/_actions/__init__.py:
	* gaupol/gtk/_actions/position.py:
	* gaupol/gtk/_actions/projects.py:
	* gaupol/gtk/_actions/search.py:
	* gaupol/gtk/_actions/text.py:
	* gaupol/gtk/_actions/tools.py:
	* gaupol/gtk/_actions/view.py:
	Refactor action modules.

2007-03-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/_agents/edit.py:
	* gaupol/_agents/position.py:
	* gaupol/_agents/register.py:
	* gaupol/_agents/set.py:
	* gaupol/_agents/support.py: